--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
-    "@angular/cdk": "^14.2.0",
+    "@angular/cdk": "^14.2.6",
     "@angular/common": "~14.2.0",
     "@angular/compiler": "~14.2.0",
     "@angular/core": "~14.2.0",
     "@angular/flex-layout": "^14.0.0-beta.41",
     "@angular/forms": "~14.2.0",
-    "@angular/material": "^14.2.0",
+    "@angular/material": "^14.2.6",
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.2.0",
     "@angular/router": "~14.2.0",
+    "@iconify/icons-ic": "^1.2.10",
     "@nrwl/angular": "15.0.4",
     "@visurel/iconify-angular": "^11.0.0",
     "ngx-spinner": "^14.0.0",
