--- a/apps/streams/project.json
+++ b/apps/streams/project.json
@@ -15,7 +15,7 @@
         "polyfills": "apps/streams/src/polyfills.ts",
         "tsConfig": "apps/streams/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": ["apps/streams/src/favicon.ico", "apps/streams/src/assets"],
+        "assets": ["apps/streams/src/favicon.ico", "apps/streams/src/assets", "apps/streams/src/netlify.toml"],
         "styles": ["apps/streams/src/styles.scss"],
         "scripts": []
       },
