--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@nrwl/angular": "15.0.4",
     "@visurel/iconify-angular": "^11.0.0",
     "ngx-spinner": "^14.0.0",
+    "primeicons": "^6.0.1",
+    "primeng": "^14.2.2",
     "rxjs": "~7.5.0",
+    "swiper": "^8.4.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
